# SkyScannerWannabe

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package-lock.json  vcpkg.json
frontend/: package-lock.json
frontend/src/: App.jsx
frontend/src/components/: Button.jsx  Header.jsx  SearchForm.jsx
frontend/src/pages/: Account.jsx  Flights.jsx  Hotels.jsx
src/: api.cpp  api.h  flights.cpp  flights.h  main.cpp
